Add needLastMediator Logic in handling Helper Pane